--- a/templates/index.html
+++ b/templates/index.html
@@ -185,7 +185,7 @@
                 youtube
                 {{name}}</strong></a>
         <br>
-        <img src="{{image}}" alt={{name}}>
+        <img src="https://storage.yandexcloud.net/filmimg/imgfilm/image_{{id}}.jpeg" alt={{name}}>
         <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/HwY1UqW3cgY" title="YouTube video player"
             frameborder="0"
