--- a/templates/index.html
+++ b/templates/index.html
@@ -166,11 +166,11 @@
     </header>
 
     <!-- Jumbotron -->
-    <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white " style="
+    <div class="bg-image p-5" style="
 background-image: url('https://storage.yandexcloud.net/filmimg/imgfilm/image_{{id}}.jpeg');
-height: 100vh;
+height: 100vh;background-repeat:no-repeat;background-position: center;background-size: cover;
 ">
-        <h1 class="mb-3 h2">{{name}}</h1>
+        <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{name}}</h1>
 
         <p>
         <p class="lead">{{original_name}}</p>
