--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,13 @@
 
 
     <style>
+        h1 {
+            color: black;
+            -webkit-text-stroke: 1px black;
+            -webkit-text-fill-color: white;
+        }
+
+
         .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
@@ -172,12 +179,13 @@ height: 100vh;background-repeat:no-repeat;background-position: center;background
 ">
         <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{name}}</h1>
 
+
         <p>
-        <p class="lead">{{original_name}}</p>
-        <p class="lead">{{country}}</p>
-        <p class="lead">{{years}}</p>
-        <p class="lead">{{genres}}</p>
-        <p class="lead">{{score_kinopoisk}}</p>
+        <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{original_name}}</h1>
+        <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{country}}</h1>
+        <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{years}}</h1>
+        <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{genres}}</h1>
+        <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{score_kinopoisk}}</h1>
         <a class="link-online" target="_blank" href="https://www.google.com/search?q=фильм+{{name}}"><strong>Ссылка
                 в
                 Google
