--- a/templates/index.html
+++ b/templates/index.html
@@ -29,13 +29,13 @@
 
 
     <style>
-        h1 {
+        h1 {font-size: 2rem;
             color: black;
             -webkit-text-stroke: 1px black;
             -webkit-text-fill-color: white;
         }
         .link-google {
-            font-size: 2rem;
+            font-size: 1.5rem;
             -webkit-text-stroke: 1px black;
             -webkit-text-fill-color: tomato;
         }
@@ -181,15 +181,15 @@
         background-image: url('https://storage.yandexcloud.net/filmimg/imgfilm/image_{{id}}.jpeg');
         height: 100vh;background-repeat:no-repeat;background-position: center;background-size: cover;
         ">
-        <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{name}}</h1>
+        <h1 class="text-center shadow-1-strong rounded  text-white">{{name}}</h1>
 
 
         <p>
-            <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{original_name}}</h1>
-            <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{country}}</h1>
-            <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{years}}</h1>
-            <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{genres}}</h1>
-            <h1 class="mb-3 text-center shadow-1-strong rounded mb-5 text-white">{{score_kinopoisk}}</h1>
+            <h1 class=" text-center shadow-1-strong rounded  text-white">{{original_name}}</h1>
+            <h1 class="text-center shadow-1-strong rounded  text-white">{{country}}</h1>
+            <h1 class="text-center shadow-1-strong rounded  text-white">{{years}}</h1>
+            <h1 class="text-center shadow-1-strong rounded  text-white">{{genres}}</h1>
+            <h1 class="text-center shadow-1-strong rounded  text-white">{{score_kinopoisk}}</h1>
             <a class="link-google " target="_blank" href="https://www.google.com/search?q=фильм+{{name}}"><strong>Ссылка
                     в
                     Google
