вид сайта обновление

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,11 @@
 
 
     <style>
+        footer {
+            position: fixed;
+            bottom: 0; 
+        }
+
         h1 {font-size: 2rem;
             color: black;
             -webkit-text-stroke: 1px black;
